--- a/css/main.css
+++ b/css/main.css
@@ -1,139 +1,29 @@
-/* Global rules */
-
-@import url('https://fonts.googleapis.com/css?family=Quicksand|Spectral');
-
-html {
-    background-color: lightgray;
-    font-family: 'Quicksand', sans-serif;
-    font-size: 0.95em;
-    line-height: 1.5em;
-    background-image: url("../images/background.jpg");
-    background-repeat: repeat;
-    background-size: 2000px 1200px;
-}
-
-body{
-    margin:0; /* removes gap at top of page */
-}
-
-::selection {
-    color: #000; 
-    background: #ff0;
-}
-
-h1 {
-    font-weight: normal;
-    margin: auto;
-    background: #fff;
-    line-height: 2.5em;
-}
-/*
- The border radius on h1.page-header and main.wrapper provide the 
- curved corners that appear on the body area of the page
-*/
-h1.page-header{
-    font-family: 'Spectral',serif;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
- }
- 
-
- main.wrapper {
-    background-color: white;
-    overflow: auto;
-    -moz-border-radius-bottomleft: 5px;
-    -moz-border-radius-bottomright: 5px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
- }
- 
-
-p {
-    margin: 1em; /* Top Right Bottom Left (TRBL) */
-}
-
-h2,h3 {
-    font-weight: normal;
-    margin-left: 1em;
-    line-height: 1em;
-}
-
-a {
-    color:darkcyan;
-    text-decoration: none;
-}
-
-a:hover {
-    color: whitesmoke;
-    background-color: darkcyan;
-    text-decoration: none;
-}
-
-footer {
-    clear: both;
-    text-align: center;
-    padding: 1em;
-}
-
-/* Responsive rules */
-
-/* DESKTOP */
-@media all and (min-width:1200px) {
-    main.wrapper {
-        width: 80%;
-        margin: auto;
-    }
-    
-    h1 {
-        width: 79%;
-        padding-left: 1%;
-    }
-    
-    picture.profile img {
-        width: 50%;
-        float: left;
-        margin-right: 2em;
-    }
-    
-}
-
-/* TABLET */
-@media all and (min-width:501px) and (max-width:1199px) {
-    main.wrapper {
-        width: 90%;
-        margin: auto;
-    }
-    
-    h1 {
-        width: 89%;
-        padding-left: 1%;
-    }
-    
-    picture.profile img {
-        width: 50%;
-        float: right;
-        margin-left: 1em;
-    }
-
-}
-
-/* PHONE */
-@media all and (max-width:500px) {
-    main.wrapper {
-        width: 100%;
-    }
-    
-    h1 {
-        width: 99%;
-        padding-left: 1%;
-    }
-    
-    picture.profile img {
-        width: 100%;
-    }
-    
-}
+form.main-form{
+    margin: 0 1%;
+  }
+  
+  form.main-form > div{
+    margin: 1em;
+  }
+  
+  form.main-form fieldset{
+    border:1px solid #ccc;
+    max-width:350px;
+  }
+  
+  form.main-form legend{
+    margin-left:0.5em;
+    padding: 0.2em 0.5em;
+    border-left:1px solid #ccc;
+    border-right:1px solid #ccc;
+  }
+  
+  form.main-form input:required{
+    border:1.25px solid red;
+  }
+  
+  form.main-form input[type="submit"]{
+    border-radius:4px;
+    border:1px solid #ccc;
+    padding:0.3em 0.5em;
+  }
